--- a/win.WPF.aDrumsManager/packages.config
+++ b/win.WPF.aDrumsManager/packages.config
@@ -4,6 +4,8 @@
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks.Material" version="2.0.0" targetFramework="net461" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
