--- a/win.WPF.aDrumsManager/win.WPF.aDrumsManager.csproj
+++ b/win.WPF.aDrumsManager/win.WPF.aDrumsManager.csproj
@@ -52,6 +52,12 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="OxyPlot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Core.1.0.0\lib\net45\OxyPlot.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot.Wpf, Version=1.0.0.0, Culture=neutral, PublicKeyToken=75e952ba404cdbb0, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Wpf.1.0.0\lib\net45\OxyPlot.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.6.3.0\lib\net45\Prism.dll</HintPath>
     </Reference>
@@ -85,10 +91,12 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Events\ApplicationBusyEvent.cs" />
+    <Compile Include="Events\TriggerActiveChangedEvent.cs" />
     <Compile Include="ManagerBootstrapper.cs" />
     <Compile Include="Resources\RegionNames.cs" />
     <Compile Include="ViewModels\ComPortsViewModel.cs" />
     <Compile Include="ViewModels\DrumManagerViewModel.cs" />
+    <Compile Include="ViewModels\MidiTriggerViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\ComPortsView.xaml.cs">
       <DependentUpon>ComPortsView.xaml</DependentUpon>
