--- a/win.WPF.aDrumsManager/win.WPF.aDrumsManager.csproj
+++ b/win.WPF.aDrumsManager/win.WPF.aDrumsManager.csproj
@@ -52,6 +52,9 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="NamedPipeWrapper, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NamedPipeWrapper.1.5.0\lib\net40\NamedPipeWrapper.dll</HintPath>
+    </Reference>
     <Reference Include="OxyPlot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
       <HintPath>..\packages\OxyPlot.Core.1.0.0\lib\net45\OxyPlot.dll</HintPath>
     </Reference>
@@ -95,8 +98,10 @@
     <Compile Include="ManagerBootstrapper.cs" />
     <Compile Include="Resources\RegionNames.cs" />
     <Compile Include="ViewModels\ComPortsViewModel.cs" />
+    <Compile Include="ViewModels\DialogViewModelBase.cs" />
     <Compile Include="ViewModels\DrumManagerViewModel.cs" />
     <Compile Include="ViewModels\MidiTriggerViewModel.cs" />
+    <Compile Include="ViewModels\SimulatorSerialPort.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\ComPortsView.xaml.cs">
       <DependentUpon>ComPortsView.xaml</DependentUpon>
